@@ -5,39 +5,39 @@
 		<gesmes:name>European Central Bank</gesmes:name>
 	</gesmes:Sender>
 	<Cube>
-		<Cube time='2020-05-04'>
-			<Cube currency='USD' rate='1.0942'/>
-			<Cube currency='JPY' rate='116.84'/>
+		<Cube time='2020-06-10'>
+			<Cube currency='USD' rate='1.1375'/>
+			<Cube currency='JPY' rate='122.16'/>
 			<Cube currency='BGN' rate='1.9558'/>
-			<Cube currency='CZK' rate='27.119'/>
-			<Cube currency='DKK' rate='7.4622'/>
-			<Cube currency='GBP' rate='0.87898'/>
-			<Cube currency='HUF' rate='353.27'/>
-			<Cube currency='PLN' rate='4.5668'/>
-			<Cube currency='RON' rate='4.8368'/>
-			<Cube currency='SEK' rate='10.8113'/>
-			<Cube currency='CHF' rate='1.0548'/>
-			<Cube currency='ISK' rate='159.50'/>
-			<Cube currency='NOK' rate='11.3280'/>
-			<Cube currency='HRK' rate='7.5820'/>
-			<Cube currency='RUB' rate='82.3404'/>
-			<Cube currency='TRY' rate='7.6932'/>
-			<Cube currency='AUD' rate='1.7022'/>
-			<Cube currency='BRL' rate='6.0781'/>
-			<Cube currency='CAD' rate='1.5390'/>
-			<Cube currency='CNY' rate='7.7275'/>
-			<Cube currency='HKD' rate='8.4838'/>
-			<Cube currency='IDR' rate='16522.42'/>
-			<Cube currency='ILS' rate='3.8581'/>
-			<Cube currency='INR' rate='82.7870'/>
-			<Cube currency='KRW' rate='1340.00'/>
-			<Cube currency='MXN' rate='26.8862'/>
-			<Cube currency='MYR' rate='4.7226'/>
-			<Cube currency='NZD' rate='1.8083'/>
-			<Cube currency='PHP' rate='55.379'/>
-			<Cube currency='SGD' rate='1.5495'/>
-			<Cube currency='THB' rate='35.397'/>
-			<Cube currency='ZAR' rate='20.3924'/>
+			<Cube currency='CZK' rate='26.609'/>
+			<Cube currency='DKK' rate='7.4553'/>
+			<Cube currency='GBP' rate='0.88963'/>
+			<Cube currency='HUF' rate='343.13'/>
+			<Cube currency='PLN' rate='4.4524'/>
+			<Cube currency='RON' rate='4.8349'/>
+			<Cube currency='SEK' rate='10.4605'/>
+			<Cube currency='CHF' rate='1.0762'/>
+			<Cube currency='ISK' rate='150.70'/>
+			<Cube currency='NOK' rate='10.5383'/>
+			<Cube currency='HRK' rate='7.5690'/>
+			<Cube currency='RUB' rate='78.1468'/>
+			<Cube currency='TRY' rate='7.7145'/>
+			<Cube currency='AUD' rate='1.6220'/>
+			<Cube currency='BRL' rate='5.5213'/>
+			<Cube currency='CAD' rate='1.5228'/>
+			<Cube currency='CNY' rate='8.0305'/>
+			<Cube currency='HKD' rate='8.8157'/>
+			<Cube currency='IDR' rate='16022.03'/>
+			<Cube currency='ILS' rate='3.9045'/>
+			<Cube currency='INR' rate='85.9030'/>
+			<Cube currency='KRW' rate='1352.17'/>
+			<Cube currency='MXN' rate='24.8255'/>
+			<Cube currency='MYR' rate='4.8361'/>
+			<Cube currency='NZD' rate='1.7357'/>
+			<Cube currency='PHP' rate='56.767'/>
+			<Cube currency='SGD' rate='1.5746'/>
+			<Cube currency='THB' rate='35.422'/>
+			<Cube currency='ZAR' rate='18.8376'/>
 		</Cube>
 	</Cube>
 </gesmes:Envelope>
